# dhewm3-sdk

./: .gitignore  CMakeLists.txt  HowToIntegrateIntoMods.md  README.md  README.txt  acmodlist.txt  cmod.sh  config.h.in  mods.sh
base/: portalsky_00.pk4
d3cclib/: CCBst.cpp  CCBst.h  CCHelpers.h
d3xp/: AFEntity.cpp  AFEntity.h  Actor.cpp  Actor.h  Entity.cpp  Entity.h  GameBase.h  GameEdit.cpp  Game_local.cpp  Game_local.h  Grab.cpp  Grabber.cpp  Item.cpp  Item.h  Misc.cpp  Misc.h  Moveable.cpp  Moveable.h  Mover.cpp  MultiplayerGame.cpp  Player.cpp  Player.h  PlayerView.cpp  Projectile.cpp  Projectile.h  Pvs.cpp  Target.cpp  Trigger.cpp  Trigger.h  Weapon.cpp  Weapon.h
d3xp/ai/: AI.cpp  AI.h  AI_events.cpp
d3xp/gamesys/: SysCmds.cpp  SysCvar.cpp  SysCvar.h
d3xp/script/: Script_Compiler.cpp  Script_Interpreter.cpp  Script_Thread.cpp  Script_Thread.h
documents/: README.txt  Rivensin camera_console_commands.txt  Rivensin combat codinginfo.txt  Rivensin sdk change log and new script commands.txt  THIRD_PERSON_FOCUS_DISTANCE.txt  camera_console_commands.txt  combatcodinginfo.txt  default thirdperson distance  grabber notes.txt  grabber porting notes.txt  hdr_console_commands.txt  maledict setup notes.txt  mapping and music system notes.txt  mapping notes.txt  sword combat 2018.txt  thirdperson tutorial 2.txt  thirdperson tutorials.txt
framework/: CVarSystem.h  Common.h  File.h  FileSystem.h  Game.h  Licensee.h  UsercmdGen.h
game/: AF.cpp  AFEntity.cpp  AFEntity.h  Actor.cpp  Actor.h  BrittleFracture.cpp  BrittleFracture.h  Entity.cpp  Entity.h  Fx.cpp  GameBase.h  GameEdit.cpp  Game_local.cpp  Game_local.h  Game_network.cpp  Grab.cpp  Grab.h  Grabber.cpp  Grabber.h  Item.cpp  Item.h  Light.cpp  Liquid.cpp  Liquid.h  Misc.cpp  Misc.h  Moveable.cpp  Moveable.h  Mover.cpp  Mover.h  MultiplayerGame.cpp  Player.cpp  Player.h  PlayerArtifacts.cpp  PlayerCursor.cpp  PlayerScriptEvents.cpp  PlayerView.cpp  PlayerView.h  Projectile.cpp  Projectile.h  (+15 more)
game/ai/: AAS.cpp  AAS_debug.cpp  AI.cpp  AI.h  AI_Golem.cpp  AI_Golem.h  AI_Shadowspawn.cpp  AI_Shadowspawn.h  AI_Veloxite.cpp  AI_Veloxite.h  AI_bot.cpp  AI_events.cpp
game/anim/: Anim.cpp  Anim.h  Anim_Blend.cpp
game/gamesys/: Event.cpp  SaveGame.cpp  SysCmds.cpp  SysCvar.cpp  SysCvar.h
game/objects/: ChaosDeviceModel.cpp  ChaosDeviceModel.h  Leaf.cpp  Leaf.h  LeafEmitter.cpp  LeafEmitter.h  Tree.cpp  Tree.h
game/physics/: Clip.cpp  Clip.h  Force_Grab.cpp  Force_Grab.h  Force_Spring.cpp  Physics.h  Physics_AF.cpp  Physics_AF.h  Physics_Actor.cpp  Physics_Actor.h  Physics_Base.cpp  Physics_Base.h  Physics_Liquid.cpp  Physics_Liquid.h  Physics_Monster.cpp  Physics_Player.cpp  Physics_Player.h  Physics_RigidBody.cpp  Physics_RigidBody.h  Push.cpp
game/projectiles/: FireStorm.cpp  FireStorm.h  Soul.cpp  Soul.h  Wraithverge.cpp  Wraithverge.h
game/script/: Script_Compiler.cpp  Script_Interpreter.cpp  Script_Interpreter.h  Script_Program.h  Script_Thread.cpp  Script_Thread.h
idlib/: Dict.cpp  Dict.h  Heap.h  LangDict.cpp  Lib.cpp  Lib.h
idlib/bv/: Bounds.cpp  Bounds.h
idlib/containers/: HashIndex.h  List.h  StrPool.h
idlib/geometry/: Winding2D.cpp
idlib/math/: Math.h  Matrix.h  Simd_SSE.cpp  Vector.cpp  Vector.h
renderer/: RenderSystem.h
sound/: sound.h
sourcehook/: FastDelegate.h  sh_memory.h  sourcehook.cpp
sys/: Stub_SDL_endian.h  platform.h  sys_public.h
